# cpp_projects

./: .gitignore  CMakeLists.txt
hw_1/: CMakeLists.txt  Makefile  README.md  bonus.txt  main.cpp
hw_1/algo/: algorithm.h  player1_algo.h  player2_algo.h
hw_1/board/: position.h  shell.h
hw_1/bord_elements/: board_element.h  tank.h  wall.h
hw_1/game/: Action.h
hw_1/include/: Action.h  Algorithm.h  BfsUtils.h  Board.h  Collision.h  Direction.h  GameManager.h  GameObject.h  GameState.cpp  GameState.h  InputParser.h  Logger.h  Mine.h  PathfindingAlgorithm.h  Shell.h  SimpleAlgorithm.h  Tank.h  Wall.h
hw_1/include/algo/: Algorithm.cpp  Algorithm.h  BfsUtils.h  Bfs_Utils.h  Bfs_utils.cpp  PathFindingAlgorithm.cpp  PathFindingAlgorithm.h  SimpleAlgorithm.cpp  SimpleAlgorithm.h  TankState.h
hw_1/input/: input_a.txt  input_b.txt  input_c.txt  map.txt  map1.txt  map2.txt  map3.txt  map5_player1.txt  map6_player2.txt
hw_1/output/: output_input_a.txt  output_input_b.txt  output_input_e.txt  output_input_f.txt
hw_1/resources/: simple_board.txt
hw_1/src/: Logger.cpp  main.cpp
hw_1/src/algo/: Algorithm.cpp  BfsUtils.cpp  PathfindingAlgorithm.cpp  SimpleAlgorithm.cpp  algorithm.cpp  algorithm.h  bfs_utils.cpp  bfs_utils.h  player1_algo.cpp  player1_algo.h  player2_algo.cpp  player2_algo.h
hw_1/src/algo/graph/: board_graph.cpp  board_graph.h  graph_node.cpp  graph_node.h  tank_state.h
hw_1/src/board/: Board.cpp  direction.h  game_board.cpp  game_board.h
hw_1/src/board_elements/: BoardElementFactory.cpp  BoardElementFactory.h  Collision.cpp  GameObject.cpp  GameObject.h  GameObjectFactory.h  board_element.cpp  board_element.h  board_element_factory.cpp  board_element_factory.h  empty_cell.h  mine.cpp  mine.h  shell.h  tank.cpp  tank.h  wall.cpp  wall.h
hw_1/src/game/: Action.cpp  GameManager.cpp  action.h  game_manager.cpp  game_manager.h
hw_1/src/state/: GameState.cpp
hw_1/src/utils/: InputParser.cpp  file_utils.cpp  file_utils.h
hw_1/tests/: algorithms_test.cpp  board_test.cpp  game_manager_test.cpp  game_state_test.cpp  input_parser_test.cpp  integration_test.cpp  position_test.cpp
hw_1/utils/: FilesUtils.cpp  FilesUtils.h
hw_2/: CMakeLists.txt  README.md  bonus.txt  run_tests.sh  tank_visualizer.py
hw_2/322868852_340849710/: CMakeLists.txt
hw_2/322868852_340849710/common/: Player.h
hw_2/322868852_340849710/include/: MyPlayerFactory.h
hw_2/322868852_340849710/input/: input_b.txt  input_d.txt
hw_2/322868852_340849710/src/algo/: MyBattleStatus.cpp  MyTankAlgorithm.h  Player2.cpp  SimpleAlgorithm.h
hw_2/322868852_340849710/src/game_manager/: InputParser.cpp
hw_2/322868852_340849710/tests/: board_test.cpp  game_state_test.cpp  position_test.cpp
hw_2/common/: ActionRequest.h  BattleInfo.h  GameManager.h  Player.h  PlayerFactory.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h
hw_2/include/: Action.h  Board.h  Direction.h  GameManager.h  GameObject.h  GameState.h  InputParser.h  Logger.h  MyActualPlayer.h  MyBattleInfo.h  MyBattleStatus.h  MyGameManager.h  MyPlayer.h  MyPlayerFactory.h  MyTankAlgorithm.h  MyTankAlgorithmFactory.h  PathfindingAlgorithm.h  Player1.h  Player2.h  SimpleAlgorithm.h  StringUtils.h  Tank.h
hw_2/input/: input_0.txt  input_4.txt  input_a.txt  input_d.txt  input_e.txt  input_f.txt
hw_2/output/: output_b.txt  output_c.txt  output_input_1.txt  output_input_2.txt  output_input_4.txt  output_input_c.txt  output_input_d.txt
hw_2/src/: Logger.cpp  main.cpp
hw_2/src/algo/: Algorithm.cpp  Direction.h  MyActualPlayer.cpp  MyActualPlayer.h  MyBattleInfo.cpp  MyBattleInfo.h  MyBattleStatus.cpp  MyBattleStatus.h  MyPlayer.cpp  MyPlayerFactory.cpp  Player1.h  (+8 more)
hw_2/tests/: algorithms_test.cpp  game_manager_test.cpp  game_state_test.cpp  input_parser_test.cpp
hw_3/: CMakeLists.txt  Makefile  README.md  create_submission.sh  input_errors.txt  log.txt  students.txt
hw_3/Algorithm/: CMakeLists.txt  Makefile  MyBattleInfo.h  MyBattleStatus.cpp  Player_322868852.h
hw_3/GameManager/: Board.cpp  Board.h  CMakeLists.txt  GameLogger.cpp  GameManager_322868852.cpp  GameManager_322868852.h  GameObject.h  GameObjectFactory.h  Makefile  Mine.h  MySatelliteView.cpp  MySatelliteView.h  Shell.h
hw_3/Simulator/: AlgorithmRegistrar.h  CMakeLists.txt  GameManagerRegistrar.h  InputParser.cpp  InputParser.h  Logger.cpp  Logger.h  Makefile  Simulator.cpp  Simulator.h  TankAlgorithmRegistration.cpp  main.cpp
hw_3/algorithm/: Algorithm_322868852.cpp  Algorithm_322868852.h  CMakeLists.txt  Makefile  MyBattleInfo.h  MyBattleStatus.cpp  MyBattleStatus.h  MyPlayer.cpp  MyPlayer.h  MyPlayerFactory.cpp  MyTankAlgorithm.cpp  MyTankAlgorithm.h  PathfindingAlgorithm.cpp  PathfindingAlgorithm.h  Player1.cpp  Player1.h  Player2.cpp  Player2.h  Player_322868852.cpp  SimpleAlgorithm.cpp
hw_3/common/: AbstractGameManager.h  BattleInfo.h  GameManagerRegistration.h  GameResult.h  Player.h  PlayerRegistration.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmRegistration.h
hw_3/gameManager/: ActionRequest.cpp  Board.cpp  Board.h  CMakeLists.txt  Collision.cpp  Collision.h  GameLogger.cpp  GameLogger.h  GameManager.cpp  GameManager.h  GameManager_322868852.cpp  GameManager_322868852.h  GameObject.cpp  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  InputParser.cpp  InputParser.h  Makefile  MySatelliteView.cpp  MySatelliteView.h  Shell.h  StringUtils.h  Tank.h  Wall.h
hw_3/input/: input_c.txt
hw_3/output/: output_d.txt
hw_3/simulator/: AlgorithmRegistrar.cpp  AlgorithmRegistrar.h  CMakeLists.txt  GameManagerRegistrar.cpp  GameManagerRegistrar.h  GameManagerRegistration.cpp  InputParser.cpp  InputParser.h  Logger.cpp  Logger.h  Makefile  MySatelliteView.h  PlayerRegistration.cpp  Simulator.cpp  Simulator.h  StringUtils.h  main.cpp
hw_3/src/algo/: SimpleAlgorithm.cpp
hw_3/src/common/: AbstractGameManager.h  GameResult.h  Player.h  SatelliteView.h  TankAlgorithm.h
hw_3/src/game_manager/: GameManager.cpp  Tank.h
hw_3/tests/: algorithms_test.cpp
hw_3/userCommon/: Direction.h  Logger.h  MyPlayerFactory.h  MyTankAlgorithmFactory.h
(+27 files in other folders)
